# VCPChat

./: .gitignore  .npmrc  main.html  main.js  package-lock.json  package.json  preload.js  renderer.js
Assistantmodules/: assistant-bar.js
Canvasmodules/: canvas.css  canvas.html  canvas.js
Groupmodules/: groupchat.js  grouprenderer.js
RAGmodules/: RAG_Observer.html  rag-observer-config.js
Translatormodules/: translator.html
VCPDistributedServer/: config.env
VCPHumanToolBox/renderer_modules/: config.js
docs/plans/: 2026-03-03-vcpchat-manual-cancel-no-timeout-design.md  2026-03-03-vcpchat-manual-cancel-no-timeout-plan.md  2026-03-04-vcpchat-stream-completion-semantics-design.md  2026-03-04-vcpchat-stream-completion-semantics-plan.md  2026-03-04-vcpchat-task-done-orchestration-design.md  2026-03-04-vcpchat-task-done-orchestration-plan.md
modules/: chatManager.js  contextSanitizer.js  event-listeners.js  global-settings-manager.js  interruptHandler.js  messageRenderer.js  settingsManager.js  streamCompletionMapper.js  taskContinuePrompt.js  taskDoneOrchestrator.js  taskDoneSignals.js  topicListManager.js  ui-helpers.js  vcpClient.js
modules/assistant/: assistant-node-adapter.js  (+1 more)
rust_assistant_engine/: Cargo.toml
rust_assistant_engine/src/: capture.rs  main.rs  metrics.rs  uia_selection_provider.rs  windows_event_source.rs
styles/: chat.css  messageRenderer.css
tests/: request-timeout-policy.test.js  stream-completion-mapper.test.js  task-continue-prompt.test.js  task-done-decision.test.js  task-done-heuristic.test.js  task-done-orchestrator.test.js
(+9 files in other folders)
